Fix: Permit HTTP OPTIONS preflight requests in SecurityConfig for GCP Cloud Run